--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "tap": "~0.4.8"
   },
   "dependencies": {
-    "bitstamp": "~0.1.4",
-    "async": "~0.2.10",
-    "winston": "~0.7.2"
+    "bitstamp": "~0.1.5",
+    "async": "~0.2.10"
   }
 }
