--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lamassu-coinmate",
-  "version": "1.0.2",
-  "description": "Lamassu Coinmate ticker and trader",
+  "version": "1.1.0",
+  "description": "Lamassu Coinmate plugin",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
