--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lamassu-coinmate",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "Lamassu Coinmate plugin",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "Bitcoin"
   ],
   "author": "Coinmate (https://coinmate.io)",
-  "license": "unlicense",
+  "license": "Unlicense",
   "bugs": {
     "url": "https://github.com/stachon/lamassu-coinmate/issues"
   },
@@ -32,6 +32,6 @@
     "lodash": "^2.4.1",
     "wreck": "^3.0.0",
     "promptly": "~0.2.0",
-    "lamassu-config": "~1.0.0"
+    "lamassu-config": "^0.4.4"
   }
 }
