--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lamassu-coinmate",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Lamassu Coinmate plugin",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "url": "https://github.com/stachon/lamassu-coinmate/issues"
   },
   "bin": {
-    "bitstamp-setup": "./setup"
+    "coinmate-setup": "./setup"
   },
   "devDependencies": {
     "chai": "^1.9.1",
